# askowl

./: README.md  pyproject.toml
askowl/: __init__.py
askowl/bp/: ask_owl_api.py
askowl/dmo/: __init__.py  owl_graph_connector.py  owl_query_extract.py  owl_query_normalize.py
askowl/dto/: __init__.py  query_result_type.py
askowl/multi/bp/: find_ontology_data.py
askowl/multi/dmo/: external_synonym_loader.py  model_result_merge.py  ner_pallete_lookup.py  view_generator_lookup.py  view_generator_nerdepth.py  view_generator_nerlabel.py  view_generator_nertaxo.py
askowl/multi/svc/: find_ner.py  find_synonyms.py  find_types.py  load_synonyms.py  query_ner_depth.py  query_ner_label.py  query_ner_taxo.py
askowl/multi/tests/: test_delimited_values_1.py  test_delimited_values_2.py  test_find_ner.py  test_find_ontology_data_1.py  test_find_ontology_data_2.py  test_ner_pallete_lookup.py
askowl/single/bp/: __init__.py  ask_owl_api.py
askowl/single/dmo/: owl_graph_connector.py  owl_query_extract.py  owl_query_normalize.py
askowl/single/svc/: __init__.py  generate_view_trie.py  load_ontology_model.py  query_ontology_model.py
askowl/svc/: generate_view_spans.py  generate_view_synonyms.py  generate_view_trie.py  load_ontology_model.py  query_ontology_model.py
resources/tests/: askowltest.owl  empty.owl  error.owl  sparse.owl
tests/: test_adhoc_query.py  test_ask_owl_api.py  test_by_subject_predicate.py  test_load_ontology_model.py  test_ngrams_query.py  test_owl_graph_connector.py  test_query_ontology_model.py  test_synonym_tokenization.py
(+10 files in other folders)
