[tool.poetry]
authors = ["Craig Trim <craigtrim@gmail.com>"]
description = "Query and Interrogate OWL (Web Ontology Language) models"
name = "askowl"
version = "0.1.6"

[tool.poetry.dependencies]
baseblock = "^0.1.2"
python = "3.8.5"
rdflib = "6.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
plac = "*"
pytest = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
